%% Mermaid ER diagram — auto-generated by moai-domain-db-docs
%% Do not edit manually — changes will be overwritten on next auto-sync.
%% To make permanent structural changes, update your migration files instead.
%% Last generated: 2026-05-18
%% Coverage: ~37 core entities across Auth / Org / RBAC / Board / Content / Media / Policy / Safety / AI domains
erDiagram

    %% ─── AUTH ───────────────────────────────────────────────────────────────────

    users {
        bigint id PK
        uuid external_id
        varchar username
        varchar name
        bytea email_encrypted
        varchar email_hmac
        smallint email_key_version
        bigint organization_id FK
        varchar status
        timestamp created_at
    }

    roles {
        varchar code PK
        varchar aliased_to FK
        boolean is_alias
    }

    user_roles {
        bigint user_id FK
        varchar role_code FK
    }

    refresh_tokens {
        bigint id PK
        bigint user_id FK
        varchar token_hash
        timestamp expires_at
        boolean is_revoked
    }

    token_blacklist {
        bigint id PK
        varchar jti
        timestamp expires_at
    }

    password_history {
        bigint id PK
        bigint user_id FK
        varchar password_hash
        timestamp created_at
    }

    %% ─── ORGANIZATION ────────────────────────────────────────────────────────────

    organization {
        bigint id PK
        bigint parent_id FK
        varchar name
        varchar path
        int depth
        varchar org_type
    }

    %% ─── PERMISSIONS / RBAC ─────────────────────────────────────────────────────

    permissions {
        varchar code PK
        varchar resource
        varchar action
        varchar description
    }

    role_permissions {
        varchar role_code FK
        varchar permission_code FK
    }

    %% ─── AUDIT ───────────────────────────────────────────────────────────────────

    audit_log {
        bigint id PK
        bigint user_id FK
        varchar action
        varchar resource_type
        bigint resource_id
        timestamp created_at
    }

    permission_change_history {
        bigint id PK
        bigint changed_by FK
        varchar role_code
        varchar permission_code
        varchar change_type
        timestamp created_at
    }

    %% ─── BOARD ───────────────────────────────────────────────────────────────────

    bbs_master {
        bigint id PK
        varchar board_name
        varchar board_type
        varchar status
        timestamp deleted_at "V27 soft delete"
    }

    bbs_post {
        bigint id PK
        bigint board_id FK
        bigint author_id FK
        varchar title
        text content
        tsvector search_vector
        boolean is_published
        timestamp created_at
    }

    bbs_comment {
        bigint id PK
        bigint post_id FK
        bigint author_id FK
        bigint parent_id FK
        text content
        timestamp created_at
    }

    bbs_attachment {
        bigint id PK
        bigint post_id FK
        bigint media_asset_id FK
        varchar original_filename
    }

    %% ─── MEDIA ───────────────────────────────────────────────────────────────────

    media_asset {
        bigint id PK
        bigint uploaded_by FK
        varchar original_filename
        varchar mime_type
        bigint file_size
        varchar storage_path
        timestamp created_at
    }

    media_collection {
        bigint id PK
        bigint created_by FK
        varchar name
    }

    media_collection_item {
        bigint id PK
        bigint collection_id FK
        bigint asset_id FK
        int sort_order
    }

    %% ─── CONTENT ─────────────────────────────────────────────────────────────────

    site {
        bigint id PK
        varchar site_code
        varchar site_name
    }

    menu {
        bigint id PK
        bigint site_id FK
        bigint parent_id FK
        varchar title
        varchar path
        int depth
    }

    page {
        bigint id PK
        bigint site_id FK
        bigint menu_id FK
        bigint author_id FK
        varchar title
        boolean is_published
        timestamp published_at
    }

    %% ─── POLICY ──────────────────────────────────────────────────────────────────

    policy_program {
        bigint id PK
        varchar program_name
        text description_html
        date effective_from
        date effective_to
        boolean is_active
        vector embed_vector "V33 pgvector 384dim"
        timestamp embedded_at
        varchar embed_model_version
    }

    policy_match_score {
        bigint id PK
        bigint match_input_id FK
        bigint program_id FK
        numeric score
        timestamp computed_at
    }

    company_match_input {
        bigint id PK
        varchar company_id
        jsonb profile_snapshot
        timestamp created_at
    }

    %% ─── SAFETY ──────────────────────────────────────────────────────────────────

    safety_incident {
        bigint id PK
        varchar title
        text content
        tsvector search_vector
        varchar severity
        timestamp occurred_at
    }

    safety_match_result {
        bigint id PK
        varchar company_id
        numeric risk_score
        timestamp computed_at
        timestamp expires_at
    }

    %% ─── PII / SECURITY ──────────────────────────────────────────────────────────

    pii_key_rotation_log {
        bigint id PK
        smallint old_key_version
        smallint new_key_version
        integer migrated_rows
        varchar status
        timestamp started_at
        timestamp finished_at
    }

    %% ─── AI ─────────────────────────────────────────────────────────────────────

    ai_prediction_log {
        bigint id PK
        varchar prediction_type
        varchar model_name
        varchar model_version
        jsonb input_features
        jsonb output_result
        numeric confidence
        integer latency_ms
        varchar status
        timestamp predicted_at
    }

    ai_simulation_session {
        uuid id PK
        varchar ksic_code
        bigint capital_amount
        integer founding_year
        varchar client_ip_hash "SHA-256 only"
        varchar pdf_status
        timestamp created_at
        timestamp expires_at "TTL 24h"
    }

    ai_model_metric {
        bigint id PK
        varchar model_name
        varchar prediction_type
        varchar aggregate_period
        date period_start
        numeric rmse
        numeric accuracy
        boolean drift_detected
        timestamp created_at
    }

    ai_retrain_queue {
        bigint id PK
        varchar model_name
        varchar trigger_reason
        varchar status
        bigint requested_by FK
        timestamp requested_at
    }

    ai_policy_recommendation_log {
        bigint id PK
        varchar session_ref "SHA-256 only"
        jsonb company_profile "PII whitelist"
        varchar interaction_type
        bigint policy_id FK
        timestamp recommended_at
    }

    ai_rag_query_log {
        bigint id PK
        varchar query_ref UK
        varchar question_hash "SHA-256 only"
        varchar session_ref "SHA-256 only"
        integer latency_ms
        boolean cache_hit
        boolean degraded
        varchar feedback
        timestamp queried_at
    }

    %% ─── RELATIONSHIPS ───────────────────────────────────────────────────────────

    %% Auth
    users ||--o{ user_roles : "has"
    roles ||--o{ user_roles : "assigned to"
    roles ||--o| roles : "aliased_to"
    users ||--o{ refresh_tokens : "owns"
    users ||--o{ password_history : "history"
    users }o--|| organization : "belongs to"
    users ||--o{ audit_log : "actor"
    users ||--o{ permission_change_history : "changed_by"

    %% RBAC
    roles ||--o{ role_permissions : "grants"
    permissions ||--o{ role_permissions : "granted via"

    %% Board
    bbs_master ||--o{ bbs_post : "contains"
    users ||--o{ bbs_post : "authors"
    bbs_post ||--o{ bbs_comment : "has"
    bbs_comment ||--o| bbs_comment : "parent"
    bbs_post ||--o{ bbs_attachment : "has"
    media_asset ||--o{ bbs_attachment : "attached as"

    %% Media
    users ||--o{ media_asset : "uploads"
    media_collection ||--o{ media_collection_item : "contains"
    media_asset ||--o{ media_collection_item : "included in"

    %% Content
    site ||--o{ menu : "has"
    menu ||--o| menu : "parent"
    site ||--o{ page : "has"
    menu ||--o{ page : "linked"
    users ||--o{ page : "authors"

    %% Organization
    organization ||--o| organization : "parent"

    %% Policy
    company_match_input ||--o{ policy_match_score : "scored"
    policy_program ||--o{ policy_match_score : "matched"

    %% AI
    users ||--o{ ai_retrain_queue : "requested"
    policy_program ||--o{ ai_policy_recommendation_log : "recommended"
